Hardening of server-side WebAuthn